--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 before_install:
-  - sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 0C49F3730359A14518585931BC711F9BA15703C6
-  - sudo apt-get update -qq
-  - sudo apt-get install -qq rabbitmq-server
+  - sudo apt-get update
+  - sudo apt-get install rabbitmq-server
 language: elixir
 elixir:
   - 1.5.2
