Another try for CircleCI. Attempt 4.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
       - run: echo "deb https://dl.bintray.com/rabbitmq/debian jessie main" > debian-jessie-main.list
       - run: sudo tee /etc/apt/sources.list.d/bintray.rabbitmq.list < debian-jessie-main.list
       - run: wget "https://dl.bintray.com/rabbitmq/Keys/rabbitmq-release-signing-key.asc"
-      - run: sudo apt-key add < rabbitmq-release-signing-key.asc
+      - run: sudo apt-key add `cat rabbitmq-release-signing-key.asc`
       - run: sudo apt-get update
       - run: sudo apt-get install -y rabbitmq-server
 
