Another try for CircleCI. Attempt LAST.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,7 @@ jobs:
     docker:
       # specify the version here
       - image: circleci/elixir:1.5
+      - image: frodenas/rabbitmq
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
@@ -14,13 +15,13 @@ jobs:
 
     working_directory: ~/repo.lib_lat_lon
     steps:
-      - run: sudo apt-get install apt-transport-https
-      - run: echo "deb https://dl.bintray.com/rabbitmq/debian jessie main" > debian-jessie-main.list
-      - run: sudo tee /etc/apt/sources.list.d/bintray.rabbitmq.list < debian-jessie-main.list
-      - run: wget "https://dl.bintray.com/rabbitmq/Keys/rabbitmq-release-signing-key.asc"
-      - run: sudo apt-key add rabbitmq-release-signing-key.asc
-      - run: sudo apt-get update
-      - run: sudo apt-get install -y rabbitmq-server erlang-nox
+      # - run: sudo apt-get install apt-transport-https
+      # - run: echo "deb https://dl.bintray.com/rabbitmq/debian jessie main" > debian-jessie-main.list
+      # - run: sudo tee /etc/apt/sources.list.d/bintray.rabbitmq.list < debian-jessie-main.list
+      # - run: wget "https://dl.bintray.com/rabbitmq/Keys/rabbitmq-release-signing-key.asc"
+      # - run: sudo apt-key add rabbitmq-release-signing-key.asc
+      # - run: sudo apt-get update
+      # - run: sudo apt-get install -y rabbitmq-server erlang-nox
 
       - checkout
 
