--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
     docker:
       # specify the version here
       - image: circleci/elixir:1.5
-      - image: frodenas/rabbitmq
+      - image: rabbitmq
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
